# OnnxOCR-UI

./: .gitignore  LICENSE  OCRmyPDF-UI.iss  OnnxOCR-UI.bat  OnnxOCR-UI.spec  README.md  app-service.bat  app-service.py  main.py  main.spec  pyproject.toml  requirements.txt  webui.py  webui2.py
.github/prompts/: 代码编写要求.prompt.md
docs/: ChangeLogs.md  OnnxOCR-UI 开发说明.md  对官方OnnxOCR的PR支持.md
docs/requirements/: requirements-cp39.txt
onnxocr_ui/: logic.py  requirements.txt  ui.py
static/: webui.css
templates/: webui.css  webui.html
